<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <ImageView
        android:layout_width="222dp"
        android:layout_height="180dp"
        android:layout_marginVertical="10dp"
        android:contentDescription="@string/content_descr_logo"
        android:gravity="center_horizontal"
        android:src="@drawable/ic_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_login_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/text_input_phone_number_hint"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:helperText="@string/required"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="68dp"

                android:enabled="false"
                android:text="@string/button_continue_text" />

            <Button
                android:id="@+id/demo_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:text="@string/button_demo_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/back_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="-9dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/content_decr_back"
                android:drawableLeft="@drawable/ic_left_arrow_blue"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="1dp"
                android:text="@string/text_view_change_number_text"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:rippleColor="@android:color/transparent" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/send_code_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_send_code_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/code_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/text_input_code_hint"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="@string/required"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/resend_code_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/button_resend_code_text_resend_code"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/term_of_use_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primaryColor"
                    android:minWidth="0dp"
                    android:minHeight="0dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/term_of_use_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_view_terms_of_use_text"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginBottom="10dp"
                android:enabled="false"
                android:text="@string/button_confirm_text" />

        </LinearLayout>
    </FrameLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_view_support_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/backend_version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/backend_version" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"

        android:text="@string/app_version" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selectedUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Текущий URL сервера: 192.168.0.1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/urlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Введи желаемый url"
                android:text="https://" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveUrlButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Сохранить URL" />

    </LinearLayout>

</LinearLayout>