<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="5dp">

        <ImageView
            android:layout_width="222dp"
            android:layout_height="180dp"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/content_descr_logo"
            android:src="@drawable/ic_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_registration"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/registration_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/text_view_surname"
                    app:endIconDrawable="@drawable/ic_clear"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapSentences"
                        android:lines="1"
                        android:maxLength="256" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/text_view_name"
                    app:endIconDrawable="@drawable/ic_clear"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapSentences"
                        android:lines="1"
                        android:maxLength="256" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/middle_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/text_view_patronymic"
                    app:endIconDrawable="@drawable/ic_clear"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapSentences"
                        android:lines="1"
                        android:maxLength="256" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/text_view_mobile_phone"
                    app:endIconDrawable="@drawable/ic_clear"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:lines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/text_view_email"
                    app:endIconDrawable="@drawable/ic_clear"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/city"
                    app:endIconDrawable="@drawable/ic_clear"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text|textCapWords"
                        android:lines="1"
                        android:maxLength="128" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/street"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/street"
                    app:endIconDrawable="@drawable/ic_clear"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text|textCapWords"
                        android:lines="1"
                        android:maxLength="128" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/house"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:hint="@string/house"
                        app:endIconDrawable="@drawable/ic_clear"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperText="@string/required">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:digits="0123456789"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLength="8" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/korpus"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:hint="@string/kor_str"
                        app:endIconDrawable="@drawable/ic_clear"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperText="@string/optional">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:lines="1"
                            android:maxLength="4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/apartment"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:hint="@string/apartment"
                        app:endIconDrawable="@drawable/ic_clear"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperText="@string/required">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:digits="0123456789"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLength="8" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/registration_button"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:enabled="false"
                    android:text="@string/button_text_registration" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/back_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="-9dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/content_decr_back"
                    android:drawableLeft="@drawable/ic_left_arrow_blue"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="1dp"
                    android:text="@string/text_view_change_number_text"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    app:rippleColor="@android:color/transparent" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/send_code_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_send_code_description" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/code"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_input_code_hint"
                    app:endIconDrawable="@drawable/ic_clear"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/required"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/resend_code_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/button_resend_code_text_resend_code"
                    android:textAllCaps="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:orientation="horizontal">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/term_of_use_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primaryColor"
                        android:minWidth="0dp"
                        android:minHeight="0dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/term_of_use_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_view_terms_of_use_text"
                        android:textSize="12sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_marginBottom="8dp"
                    android:enabled="false"
                    android:text="@string/button_confirm_text" />

            </LinearLayout>

        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/support_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/text_view_support_text" />

    </LinearLayout>


</ScrollView>